# Loop-Engineering

./: README.md  Technical Roadmap_ Engineering Advanced Adaptation Loops for Self-Adaptive Systems (SAS).md  pyproject.toml
src/loop_engineering/: __init__.py  analyze.py  core.py  execute.py  knowledge.py  langgraph_agent.py  mape_k.py  monitor.py  plan.py  taxonomy.py
tests/: test_analyze.py  test_core.py  test_execute.py  test_knowledge.py  test_langgraph_agent.py  test_mape_k.py  test_monitor.py  test_plan.py  test_taxonomy.py
